@@ -2,15 +2,13 @@
 set foo = "bar"
 flags += " -g "
 ocamldebug_script = "${test_source_directory}/input_script"
-* skip
-reason = "ocamldebug is broken (#34)"
-** debugger
-*** shared-libraries
-**** setup-ocamlc.byte-build-env
-***** ocamlc.byte
-****** check-ocamlc.byte-output
-******* ocamldebug
-******** check-program-output
+* debugger
+** shared-libraries
+*** setup-ocamlc.byte-build-env
+**** ocamlc.byte
+***** check-ocamlc.byte-output
+****** ocamldebug
+******* check-program-output
 *)
 
 print_endline Sys.argv.(1);;
