@@ -1,27 +1,25 @@
 (* TEST
 ocamldebug_script = "${test_source_directory}/input_script"
-* skip
-reason = "ocamldebug is broken (#34)"
-** debugger
-*** shared-libraries
-**** setup-ocamlc.byte-build-env
-***** script
+* debugger
+** shared-libraries
+*** setup-ocamlc.byte-build-env
+**** script
 script = "mkdir out"
-****** ocamlc.byte
+***** ocamlc.byte
 flags = "-g -c"
 all_modules = "${test_source_directory}/in/blah.ml"
 program = "out/blah.cmo"
-******* ocamlc.byte
+****** ocamlc.byte
 program = "out/foo.cmo"
 flags = "-I out -g -c"
 all_modules = "${test_source_directory}/in/foo.ml"
-******** ocamlc.byte
+******* ocamlc.byte
 all_modules = "out/blah.cmo out/foo.cmo"
 flags = " -g "
 program = "debuggee.exe"
-********* check-ocamlc.byte-output
-********** ocamldebug
-*********** check-program-output
+******** check-ocamlc.byte-output
+********* ocamldebug
+********** check-program-output
 *)
 
 (* This file only contains the specification of how to run the test *)
